# CSE180

./: README.md  map.txt
devel/: .catkin  .rosinstall
devel/include/husky_msgs/: HuskyStatus.h
devel/lib/assignments/: averagepose  cleanarea  drift  final  goto  gotopoint  gotoposition  gotospecpoint  lasertest2  lasertest3  moverobot  moverobotproject  moverobotproject2  navigate  projectscan  tour
devel/lib/husky_base/: husky_node
devel/lib/interactive_marker_twist_server/: marker_server
devel/lib/lms1xx/: LMS1xx_node
devel/lib/pkgconfig/: assignments.pc  husky_base.pc  husky_bringup.pc  husky_control.pc  husky_description.pc  husky_gazebo.pc  husky_msgs.pc  husky_navigation.pc  husky_viz.pc  interactive_marker_twist_server.pc  lms1xx.pc
devel/share/assignments/cmake/: assignmentsConfig.cmake
devel/share/husky_base/cmake/: husky_baseConfig.cmake
devel/share/husky_bringup/cmake/: husky_bringupConfig.cmake
devel/share/husky_control/cmake/: husky_controlConfig.cmake
devel/share/husky_description/cmake/: husky_descriptionConfig.cmake
devel/share/husky_gazebo/cmake/: husky_gazeboConfig.cmake
devel/share/husky_msgs/cmake/: husky_msgs-msg-paths.cmake  husky_msgsConfig.cmake
devel/share/husky_navigation/cmake/: husky_navigationConfig.cmake
devel/share/husky_viz/cmake/: husky_vizConfig.cmake
devel/share/interactive_marker_twist_server/cmake/: interactive_marker_twist_serverConfig.cmake
devel/share/lms1xx/cmake/: lms1xxConfig.cmake
devel/share/roseus/ros/husky_msgs/: manifest.l
src/assignments/: CMakeLists.txt  package.xml
src/assignments/src/: averagepose.cpp  cleanarea.cpp  drift.cpp  goto.cpp  gotopoint.cpp  gotoposition.cpp  lasertest2.cpp  moverobot.cpp  navigate.cpp  projectscan.cpp  tour.cpp  transformations.cpp
src/husky/husky_gazebo/launch/: pioneer3at.gazebo.launch
