cmake_minimum_required(VERSION 2.8.3)
project(assignments)

find_package(catkin REQUIRED COMPONENTS roscpp geometry_msgs tf2 tf2_ros actionlib laser_geometry)

catkin_package()

include_directories(${catkin_INCLUDE_DIRS})

add_executable(moverobot src/moverobot.cpp)
add_executable(drift src/drift.cpp)
add_executable(gotoposition src/gotoposition.cpp)
add_executable(goto src/goto.cpp)
add_executable(gotopoint src/gotopoint.cpp)
add_executable(navigate src/navigate.cpp)
add_executable(tour src/tour.cpp)
add_executable(cleanarea src/cleanarea.cpp)
add_executable(averagepose src/averagepose.cpp)
add_executable(moverobotproject src/moverobotproject.cpp)
add_executable(moverobotproject2 src/moverobotproject2.cpp)
add_executable(projectscan src/projectscan.cpp)
add_executable(lasertest2 src/lasertest2.cpp)
add_executable(lasertest3 src/lasertest3.cpp)
add_executable(final src/final.cpp)
add_executable(gotospecpoint src/gotospecpoint.cpp)

#add_executable(transformations src/transformations.cpp)

target_link_libraries(moverobot ${catkin_LIBRARIES})
target_link_libraries(drift ${catkin_LIBRARIES})
target_link_libraries(gotoposition ${catkin_LIBRARIES})
target_link_libraries(goto ${catkin_LIBRARIES})
target_link_libraries(gotopoint ${catkin_LIBRARIES})
target_link_libraries(navigate ${catkin_LIBRARIES})
target_link_libraries(tour ${catkin_LIBRARIES})
target_link_libraries(cleanarea ${catkin_LIBRARIES})
target_link_libraries(averagepose ${catkin_LIBRARIES})
target_link_libraries(moverobotproject ${catkin_LIBRARIES})
target_link_libraries(moverobotproject2 ${catkin_LIBRARIES})
target_link_libraries(final ${catkin_LIBRARIES})
target_link_libraries(projectscan ${catkin_LIBRARIES})
target_link_libraries(lasertest2 ${catkin_LIBRARIES})
target_link_libraries(lasertest3 ${catkin_LIBRARIES})
target_link_libraries(gotospecpoint ${catkin_LIBRARIES})

#target_link_libraries(transformations ${catkin_LIBRARIES})
